--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,13 @@
 
 
 {% block content %}
-<div class="min-h-screen flex items-center justify-center px-4" style="background-image: url('{% static "images/bg2.png" %}'); background-size: cover; background-position: center;">
+<!-- Full Screen Background Image -->
+<div 
+  class="fixed inset-0 w-full h-full z-0"
+  style="background-image: url('{% static 'images/background.png' %}'); background-size: cover; background-position: center; background-repeat: no-repeat;"
+></div>
+
+<div class="min-h-screen flex items-center justify-center px-4 relative z-10">
  <div class="bg-black bg-opacity-75 text-white p-16 rounded-lg shadow-lg max-w-full">
    <div class="text-center">
      <h1 class="text-5xl font-bold mb-6 text-orange-500">About TournifyX</h1>
