--- a/templates/host_tournament.html
+++ b/templates/host_tournament.html
@@ -5,9 +5,13 @@
 
 
 {% block content %}
+<!-- Full Screen Background Image -->
+<div 
+  class="fixed inset-0 w-full h-full z-0"
+  style="background-image: url('{% static 'images/background.png' %}'); background-size: cover; background-position: center; background-repeat: no-repeat;"
+></div>
 
-
-<div class="min-h-screen flex flex-col items-center py-10">
+<div class="min-h-screen flex flex-col items-center py-10 relative z-10">
  <!-- Logo -->
  <img src="{% static 'images/logo.png' %}" alt="Logo" class="w-32 h-32 mb-6">
 
