--- a/templates/join_tournament.html
+++ b/templates/join_tournament.html
@@ -3,7 +3,13 @@
 {% block title %}Join a Tournament{% endblock %}
 {% block content %}
 {% load static %}
-<div class="min-h-screen flex items-center justify-center bg-cover bg-center" style="background-image: url('{% static "images/bg2.png" %}');">
+<!-- Full Screen Background Image -->
+<div 
+  class="fixed inset-0 w-full h-full z-0"
+  style="background-image: url('{% static 'images/background.png' %}'); background-size: cover; background-position: center; background-repeat: no-repeat;"
+></div>
+
+<div class="min-h-screen flex items-center justify-center relative z-10">
   <div class="flex bg-white/10 backdrop-blur-md rounded-lg shadow-lg overflow-hidden w-full max-w-7xl h-[800px]">
     <!-- Left Panel (Image) -->
     <div class="w-1/2 hidden md:block">
