--- a/templates/public_tournaments.html
+++ b/templates/public_tournaments.html
@@ -1,8 +1,15 @@
 <!-- filepath: c:\Users\RYZEN\PycharmProjects\tournifyx\templates\public_tournaments.html -->
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}Public Tournaments{% endblock %}
 {% block content %}
-<div class="min-h-screen flex items-center justify-center">
+<!-- Full Screen Background Image -->
+<div 
+  class="fixed inset-0 w-full h-full z-0"
+  style="background-image: url('{% static 'images/background.png' %}'); background-size: cover; background-position: center; background-repeat: no-repeat;"
+></div>
+
+<div class="min-h-screen flex items-center justify-center relative z-10">
     <div id="public-tournaments-panel" class="max-w-4xl w-full bg-black bg-opacity-70 rounded-lg shadow-lg p-8 fade-in">
         <h1 class="text-3xl font-bold text-orange-500 mb-6 text-center">Public Tournaments</h1>
         {% if tournaments %}
