--- a/templates/update_tournament.html
+++ b/templates/update_tournament.html
@@ -7,7 +7,13 @@
 
 
 {% block content %}
-<div class="flex items-center justify-center min-h-screen">
+<!-- Full Screen Background Image -->
+<div 
+  class="fixed inset-0 w-full h-full z-0"
+  style="background-image: url('{% static 'images/background.png' %}'); background-size: cover; background-position: center; background-repeat: no-repeat;"
+></div>
+
+<div class="flex items-center justify-center min-h-screen relative z-10">
    <div class="max-w-4xl w-full p-6 bg-gray-800 bg-opacity-80 shadow-md rounded-lg text-white">
        <!-- Tournify Logo -->
        <div class="flex justify-center mb-6">
