--- a/templates/user_tournaments.html
+++ b/templates/user_tournaments.html
@@ -3,7 +3,13 @@
 {% block title %}My Tournaments{% endblock %}
 
 {% block content %}
-<div class="min-h-screen bg-transparent text-white py-10 flex items-center justify-center">
+<!-- Full Screen Background Image -->
+<div 
+  class="fixed inset-0 w-full h-full z-0"
+  style="background-image: url('{% static 'images/background.png' %}'); background-size: cover; background-position: center; background-repeat: no-repeat;"
+></div>
+
+<div class="min-h-screen bg-transparent text-white py-10 flex items-center justify-center relative z-10">
    <div id="tournament-panel" class="max-w-6xl w-full bg-black bg-opacity-70 rounded-lg shadow-lg p-8 fade-in">
        <!-- Logo Section -->
        <div class="flex justify-center mb-6">
