--- a/templates/home.html
+++ b/templates/home.html
@@ -34,6 +34,11 @@
   style="background-image: url('{% static 'images/background.png' %}'); background-size: cover; background-position: center; background-repeat: no-repeat;"
 ></div>
 
+<!-- Logo -->
+<div class="fixed top-48 left-96 z-20 text-center">
+  <img src="{% static 'images/logo.png' %}" alt="TournifyX Logo" class="w-40 h-40 mx-auto mb-2">
+</div>
+
 <!-- Right Side Long Image with Fade Animation -->
 <div 
   id="rightSideImage"
@@ -48,7 +53,7 @@
     background-position: center; 
     background-repeat: no-repeat;
     opacity: 0;
-    animation: fadeIn 1s ease-in-out 1s forwards;
+    animation: fadeIn 1s ease-in-out .3s forwards;
     border-radius: 10px;
   "
 ></div>
